--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 
       <!-- SECTION 3 — OUR BELIEFS -->
       <section id="our-beliefs" class="body-section">
+        <img src="our_beliefs_top1.png" alt="">
         <div class="container">
           <h2>OUR BELIEFS</h2>
 
@@ -197,6 +198,7 @@
 
       <!-- SECTION 5 — ABOUT US -->
       <section id="about-us" class="body-section">
+        <img src="about_us_helen.png" alt="">
         <div class="container">
           <h2>ABOUT US</h2>
 
